# united-states-of-browsers-2

./: pyproject.toml
__united-states-of-browsers/: .gitignore  requirements.txt
__united-states-of-browsers/tests/tests/: test_browser_exceptions.py
__united-states-of-browsers/united_states_of_browsers/db_merge/: exceptions_handling.py
united-states-of-browsers-2/__archived/: config.json  config.toml  config.txt  config_text.py  load_configuration.py  scaffold.py  settings.py
united-states-of-browsers-2/configuration/: app.yml  fields.yml  locations.yml
united-states-of-browsers-2/configuration/browsers/: fields.yml  locations.yml
united-states-of-browsers-2/ports/: configuration.py
united-states-of-browsers-2/src/: database.py  history_reader.py  loader.py  scaffold.py  schema.py  value_objects.py
united-states-of-browsers-2/src/config_loader/: loader.py
united-states-of-browsers-2/src/database/: db_reader.py  schema.py  utils.py
